Prevent swatches hover state jumping because of tooltip

--- a/src/components/swatches/swatches.scss
+++ b/src/components/swatches/swatches.scss
@@ -442,3 +442,7 @@ $swatches_tooltip-thumbnail-height: #{map-get(
         }
     }
 }
+
+.swatch-option-tooltip {
+    pointer-events: none;
+}
